--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/amazon-bedrock": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.670.0",
+    "@aws-sdk/client-transcribe": "^3.670.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.670.0",
+    "@aws-sdk/client-dynamodb": "^3.670.0",
+    "@aws-sdk/lib-dynamodb": "^3.670.0",
     "@clerk/nextjs": "^6.22.0",
     "@hookform/resolvers": "^5.1.1",
     "@mendable/firecrawl-js": "^1.26.0",
