--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
-    "@clerk/nextjs": "^6.22.0",
+    "@aws-amplify/ui-react": "^5.0.18",
     "@hookform/resolvers": "^5.1.1",
     "@mendable/firecrawl-js": "^1.26.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -36,6 +36,8 @@
     "@tobyg74/tiktok-api-dl": "^1.3.2",
     "@types/jsdom": "^21.1.7",
     "ai": "^4.3.16",
+    "aws-amplify": "^6.3.1",
+    "aws-jwt-verify": "^4.0.1",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +45,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.24.8",
     "jsdom": "^26.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
     "next-intl": "^4.1.0",
@@ -53,7 +56,6 @@
     "react-hook-form": "^7.58.1",
     "rettiwt-api": "^6.0.2",
     "sonner": "^2.0.5",
-    "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
