--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
-    "@aws-amplify/ui-react": "^5.0.18",
     "@hookform/resolvers": "^5.1.1",
     "@mendable/firecrawl-js": "^1.26.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -36,14 +35,13 @@
     "@tobyg74/tiktok-api-dl": "^1.3.2",
     "@types/jsdom": "^21.1.7",
     "ai": "^4.3.16",
-    "aws-amplify": "^6.3.1",
-    "aws-jwt-verify": "^4.0.1",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.24.8",
+    "jose": "^5.10.0",
     "jsdom": "^26.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.518.0",
