--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.670.0",
     "@aws-sdk/client-dynamodb": "^3.670.0",
     "@aws-sdk/lib-dynamodb": "^3.670.0",
-    "@clerk/nextjs": "^6.22.0",
+    "jose": "^5.9.3",
     "@hookform/resolvers": "^5.1.1",
     "@mendable/firecrawl-js": "^1.26.0",
     "@radix-ui/react-accordion": "^1.2.11",
