feat: add origin tracing demo and diagram components for enhanced fact-checking visualization
- Introduced new components for OriginTracingDemo and OriginTracingDiagram to visualize the flow of misinformation and its origins.
- Updated the AnalysisPage to incorporate the new OriginTracingDiagram, improving user insights into fact-checked content.
- Enhanced package dependencies with @xyflow/react for diagram rendering and added relevant types for D3-related functionalities.
- Created a demo page to showcase the Origin Tracing Diagram with realistic data, enriching the user experience in understanding misinformation dynamics.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@the-convocation/twitter-scraper": "^0.17.1",
     "@tobyg74/tiktok-api-dl": "^1.3.2",
     "@types/jsdom": "^21.1.7",
+    "@xyflow/react": "^12.8.5",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
     "better-auth": "^1.3.13",
