--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 
 #--region---
-AWS_REGION=
+APP_REGION=
 AWS_ACCESS_KEY_ID=A
 AWS_SECRET_ACCESS_KEY
 
@@ -29,7 +29,8 @@ COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/callback/cognito
 COGNITO_LOGOUT_REDIRECT_URI=http://localhost:3000
 
 # .env.local
-COGNITO_REGION=ap-southeast-5
+# Optional legacy fallback if APP_REGION not set
+# AWS_REGION=ap-southeast-1
 
 BETTER_AUTH_URL=
 
