refactor: migrate to local authentication and update environment configuration
- Replaced Cognito authentication with a local authentication mechanism, updating relevant API routes and middleware to support the new structure.
- Enhanced environment configuration by adding AUTH_SECRET, ADMIN_EMAIL, and ADMIN_PASSWORD to `env.example`.
- Removed deprecated Cognito-related code and dependencies, streamlining the authentication process.
- Updated README to reflect changes in authentication and database setup using Drizzle ORM with PostgreSQL.
- Refactored various components and API routes to align with the new authentication strategy, ensuring a cohesive user experience.

--- a/env.example
+++ b/env.example
@@ -1,11 +1,13 @@
+# Add your environment variables here
 
-#--region---
-APP_REGION=
-AWS_ACCESS_KEY_ID=A
-AWS_SECRET_ACCESS_KEY
+AUTH_SECRET="replace-with-a-long-random-string"
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="password"
 
-#-- s3
-S3_BUCKET=
+# Database (Postgres)
+# Example: postgres://USER:PASSWORD@HOST:PORT/DB_NAME
+# For Neon/Supabase, paste the full connection string provided by the service.
+DATABASE_URL=
 
 #--Firecrawl
 FIRECRAWL_API_KEY=
@@ -13,24 +15,6 @@ FIRECRAWL_API_KEY=
 
 #--EXA
 EXA_API_KEY=
-
-#--DDB
-DDB_TABLE=
-
-#--Cognito
-COGNITO_USER_POOL_ID=
-
-COGNITO_CLIENT_ID==
-NEXT_PUBLIC_COGNITO_CLIENT_ID=
-
-COGNITO_DOMAIN=
-NEXT_PUBLIC_COGNITO_DOMAIN=
-COGNITO_REDIRECT_URI=http://localhost:3000/api/auth/callback/cognito
-COGNITO_LOGOUT_REDIRECT_URI=http://localhost:3000
-
-# .env.local
-# Optional legacy fallback if APP_REGION not set
-# AWS_REGION=ap-southeast-1
 
 BETTER_AUTH_URL=
 
