--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^1.0.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.670.0",
     "@aws-sdk/client-dynamodb": "^3.670.0",
     "@aws-sdk/client-s3": "^3.670.0",
     "@aws-sdk/client-transcribe": "^3.670.0",
@@ -42,11 +41,12 @@
     "@xyflow/react": "^12.8.5",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
-    "better-auth": "^1.3.13",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
     "jose": "^5.9.3",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.518.0",
@@ -54,6 +54,7 @@
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "openai": "^5.6.0",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
@@ -71,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
