feat: add Redis configuration and integrate Redis-backed rate limiting
- Added Redis configuration options to `env.example` for ElastiCache integration.
- Installed `ioredis` package for Redis client support.
- Updated rate limiting functions to support Redis-backed rate limiting, enhancing scalability and performance.
- Refactored `checkRateLimit` and `createRateLimitMiddleware` to handle asynchronous operations with Redis.

--- a/env.example
+++ b/env.example
@@ -22,3 +22,14 @@ BEDROCK_MODEL_ID=
 
 EXA_API_KEY=
 
+# Redis (Amazon ElastiCache)
+# Set these in Amplify environment variables after enabling VPC access.
+# Use cluster config endpoint with REDIS_MODE=cluster, or primary endpoint with REDIS_MODE=single.
+REDIS_MODE=single
+REDIS_HOST=
+REDIS_PORT=6379
+REDIS_USERNAME=default
+REDIS_PASSWORD=
+REDIS_TLS=true
+REDIS_KEY_PREFIX=cm:
+
