--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "^1.1.1",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "ioredis": "^5.7.0",
     "jose": "^5.9.3",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.518.0",
